# ROS2_Robot_Hackathon

./: .gitignore  readme.md  test_low.py
ai_module_ros_api/: README.md
ai_module_ros_api/src/bringup/: setup.py
ai_module_ros_api/src/bringup/launch/: ai_driver.launch.py
ai_module_ros_api/src/camera/: README.md  package.xml  setup.py
ai_module_ros_api/src/camera/camera/: camera.py
ai_module_ros_api/src/config_service_interface/: CMakeLists.txt  package.xml
ai_module_ros_api/src/config_service_interface/srv/: ConfigArg.srv  ConfigBase.srv  ConfigModel.srv
ai_module_ros_api/src/config_service_server/: package.xml  setup.cfg  setup.py
ai_module_ros_api/src/config_service_server/config_service_server/: board_manager.py  server_node.py
ai_module_ros_api/src/http_api/: package.xml  setup.py
ai_module_ros_api/src/http_api/http_api/: http_api.py
ai_module_sources/dataset_recorder/: CMakeLists.txt  MJPEGWriter.cpp  MJPEGWriter.h  main.cpp
ai_module_sources/dataset_recorder/libs/: .gitignore  download.sh
ai_module_sources/inference/: CMakeLists.txt  MJPEGWriter.cpp  MJPEGWriter.h  config.h  main.c  manage.py
ai_module_sources/inference/libs/: .gitignore  download.sh
docs/: LicheeRV_aliexpress.xlsx  README.md  hold.STL  Конфигурация_AI_Модуля.md  Крепёж.md  Настройка_Платы_LicheeRV.md  ОБУЧЕНИЕ_И_КОНВЕРТАЦИЯ.md  РАЗМЕТКА_ДАТАСЕТА.md  Сбор_Датасета.md
docs/notebooks/: Compile_AI_Module_Embedded_Software.ipynb  YOLO_FOR_LICHEERV_NANO.ipynb
low_level/lidar_low_level/: lidar_low_level.ino
ros2_ws/laser_scaner/: package.xml  setup.cfg  setup.py
ros2_ws/lichee_camera/: setup.py
ros2_ws/lichee_camera/lichee_camera/: lichee_camera.py
ros2_ws/src/laser-scaner/: package.xml  setup.cfg  setup.py
ros2_ws/src/laser_scaner/: setup.py
ros2_ws/src/laser_scaner/laser_scaner/: laser_scaner.py
ros2_ws/src/lichee_camera/: package.xml  setup.cfg
ros2_ws/src/lichee_http_read/: package.xml  setup.cfg  setup.py
ros2_ws/src/lichee_http_read/lichee_http_read/: lichee_http_read.py
ros2_ws/src/robot_control/: package.xml  setup.py
ros2_ws/src/robot_control/robot_control/: .pose_follower.py.swm  .pose_follower.py.swn  .pose_follower.py.swo  .pose_follower.py.swp  pose_follower.py  pose_follower.py~  robot_controller_node.py
